--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -57,6 +57,10 @@ section {
     font-size: 4vw; /* 5% da largura da tela vai ajustar auto*/
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -65,12 +69,25 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 9px 13px 0px rgba(0, 0, 0, 0.473); /* sombra para dentro da caixa*/
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.507);
+    text-shadow: 1px 1px 0 black; /* sombra letras do texto*/
+}
+
+section#img01 {
+    background-image: url('../d012/imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../d012/imagens/background002.jpg');
 }
 
 footer {
